# velocidb

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  FIXES.md  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: docs.yml
benches/: benchmarks.rs
docs/: architecture.md  development_journey.md  implementation.md  repl_usage.md
search.index/: 0038547c6d51.js  00423b04eb45.js  0124571031f3.js  0145391a0fb6.js  0195ae5fcf35.js  03412fa9e18b.js  048549c93318.js  05561836fcf9.js  063243dadc25.js  07b13d0656a8.js  08c58052ee54.js  098c5f8ad6ca.js  09c4d1a1c687.js  0ad2496bba0b.js  0c22b2d9ce65.js  0c8a40999644.js  0e89d57dfc93.js  0f0d4e2a57bd.js  0f7f9a1316cc.js  1112ec26823c.js  1680ef930a2c.js  17c3979ccf27.js  18c31998823f.js  1bcf13cb8873.js  1bd688dbd526.js  1c2f93478554.js  1dab026ab80a.js  1e1953f13e95.js  1e4e90965187.js  20629462482a.js  239a4f38f0d2.js  25163fb7ac0a.js  2617690cef2b.js  2669b72c0259.js  266d73f237c7.js  269eba8970bf.js  28f801a9a1bd.js  29424d155e4e.js  2add45df1a07.js  2b6390321de3.js  (+115 more)
search.index/crateNames/: 6d5e49d7d783.js
search.index/desc/: 1ef0a701040b.js  2da023c4c400.js
search.index/entry/: 770409a43584.js  e6a85027f8c4.js
search.index/function/: 3cb305565055.js  7d8200710f51.js
search.index/generic_inverted_index/: 09aa33089d1b.js  3885a7e36107.js
search.index/name/: baaf410f5353.js  faf470efa6d6.js
search.index/normalizedName/: 879e982b4bfe.js  96fbd8ec0ff4.js
search.index/path/: bd8cdb39a45b.js  f20b72b5c632.js
search.index/type/: 6350bf4963d9.js  ad817bbc9a91.js
src/: async_io.rs  btree.rs  btree_optimized.rs  cloud_vfs.rs  crdt.rs  executor.rs  hybrid_storage.rs  lib.rs  lockfree.rs  main.rs  mvcc.rs  parser.rs  pmem.rs  simd.rs  storage.rs  transaction.rs  types.rs
src/velocidb/: async_io.rs.html  btree.rs.html  btree_optimized.rs.html  cloud_vfs.rs.html  crdt.rs.html  executor.rs.html  hybrid_storage.rs.html  lib.rs.html  lockfree.rs.html  mvcc.rs.html  parser.rs.html  pmem.rs.html  simd.rs.html  storage.rs.html  transaction.rs.html  types.rs.html
tests/: integration_tests.rs
type.impl/std/: primitive.u64.js
velocidb/: all.html  index.html  sidebar-items.js
velocidb/async_io/: enum.IoRequest.html  index.html  sidebar-items.js  struct.AsyncPageCache.html  struct.AsyncPager.html  struct.BatchIoExecutor.html  struct.CacheStats.html  struct.TokioVfs.html  trait.AsyncVfs.html
velocidb/btree/: constant.BTREE_ORDER.html  constant.MIN_KEYS.html  enum.NodeType.html  index.html  sidebar-items.js  struct.BTree.html  struct.NodeHeader.html
velocidb/btree_optimized/: constant.CACHE_LINE_SIZE.html  constant.OPTIMIZED_BTREE_ORDER.html  index.html  sidebar-items.js  (+4 more)
(+118 files in other folders)
