[package]
name = "velocidb"
version = "0.1.0"
edition = "2021"
authors = ["VelociDB Contributors"]
description = "A high-performance SQLite reimplementation in Rust optimized for modern hardware"
license = "MIT"

[dependencies]
parking_lot = "0.12"
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
memmap2 = "0.9"
rand = "0.8"
aho-corasick = "1.1"
rayon = "1.8"
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lru = "0.12"
dashmap = "5.5"
num_cpus = "1.16"
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async I/O and runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"], optional = true }
tokio-uring = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

# Lock-free data structures
lockfree = { version = "0.5", optional = true }

# SIMD and vectorization
packed_simd_2 = { version = "0.3", optional = true }

# CRDT support
automerge = { version = "0.5", optional = true }

# Cloud storage
object_store = { version = "0.9", optional = true }

# Persistent memory
pmem = { version = "0.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
quickcheck = "1.0"

[features]
default = ["async-io", "lock-free"]
async-io = ["tokio", "futures", "async-trait"]
io-uring = ["tokio-uring"]
pmem-support = ["pmem"]
crdt-sync = ["automerge"]
cloud-vfs = ["object_store"]
lock-free = ["lockfree"]
simd = ["packed_simd_2"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
